# RAG-Retrieval-Augmented-Generation-

./: README.md  pyproject.toml  requirements.txt
1.data_parsing/: 1.data_ingestion.ipynb  2.dataparsingpdf.ipynb  3.dataparsingdocx.ipynb  4.Dataparsingcsv.ipynb
1.data_parsing/data/csv/: students.csv
1.data_parsing/data/docx/: ml.docx
1.data_parsing/data/json/: students.json
1.data_parsing/data/text_files/: python_intro.txt
2.vector embeddings/: 1.embedding.ipynb  2.huggingfaceembedding.ipynb  3.openaiembeddings.ipynb
3.vector store/: 1.chromadb.ipynb  2.faiss.ipynb  3.Inmemoryvectorstore.ipynb
3.vector store/chroma_db/: chroma.sqlite3
3.vector store/faiss_index/: index.faiss  index.pkl
4.semantic chunking/: langchain_intro.txt  semantic_chunking.ipynb
